--- a/loginstyle.css
+++ b/loginstyle.css
@@ -1,10 +1,26 @@
-.gradient-custom {
-
-background: #6a11cb;
-
-
-background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-
-
-background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+body{
+    /* This declares a var that can be used throughout the css code */
+    --color-error:#cc3333;
+    --color-success:#4bb544;
+    --border-radius:4px;
+    margin: 0;
+    height: 100 vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+}
+.container{
+    width: 400px;
+    max-width: 400px;
+    margin: 1rem; /*This is referenceing the parent font-size (18px) * 1rem = 18px*/
+    padding: 2rem; /*This will be 36px or 2*18px */
+    box-shadow: 0 0 40px black; /* The four values= Horizontal offset, Vertical offset, blur radius, color*/
+    border-radius: var(--border-radius);
+    background: white;
+}
+.container, 
+.formInput,
+.formButton{
+    font: 500 1 rem 'Quicksand', sans-serif;
 }
