--- a/loginstyle.css
+++ b/loginstyle.css
@@ -24,6 +24,10 @@ body{
 .formButton{
     font: 500 1 rem 'Quicksand', sans-serif;
 }
+.formTitle{
+    margin-bottom: 2 rem;
+    text-align: center;
+}
 /* The following code will eliminate the deadspace within the form box. It will bring things closer together from top and bottom.
 The frist child is the H1 login tag and the last child is the create account P tag*/
 .form > *:first-child{
@@ -44,4 +48,65 @@ The frist child is the H1 login tag and the last child is the create account P t
 
 .formMessageError{
     color: var(--color-error);
+}
+.formInputGroup{
+    margin-bottom: 1rem;
+}
+.formInput{
+    display: block;
+    width: 100%;
+    padding: 0.75 rem;
+    box-sizing: border-box; /* Box-sizing accounts for the width and height sizing. Border-Box tells to account for other specific values like padding or border. It will shrink to accommodate.*/
+    border-radius: var(--border-radius);
+    border: 1px solid #dddddd;
+    outline: none;
+    background: #eeeeee;
+    transition: background 0.2s, border-color 0.2s;
+}
+/* Styles the input fields when typing in credential*/
+.formInput:focus{
+    border-color: green;
+    background: white;
+
+}
+.formInputError{
+    color: var(--color-error); /* By having the var color-error defined, when making changes it will affect all values that use color-error*/
+    border-color: var(--color-error);
+}
+.formInputErrorMessage{
+    margin-top: 0.5 rem;
+    font-size: .85 rem;
+    color: var(--color-error);
+}
+.formButton{
+    width: 100%;
+    padding: 1rem 2rem;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: none;
+    border-radius: var(--border-radius);
+    outline: none;
+    cursor: pointer;
+    background: black;
+}
+.formButton:hover{
+    background: pink;
+}
+.formButton:active{
+    transform: scale(0.98);
+}
+.formText{
+    text-align: center;
+}
+.formLink{
+    color: green;
+    text-decoration: none;
+    cursor: pointer;
+}
+.formLink:hover{
+    text-decoration: underline;
+}
+.formHidden{
+    display: none;
 }
