--- a/fashion.css
+++ b/fashion.css
@@ -1,6 +1,8 @@
 #buttons{
 width: 100%;
-height: auto;}
+height: auto;
+}
+
 .buttonup {
 padding: 0px;
 width: 50px;
@@ -24,22 +26,23 @@ background-image: url('upvote.jpg');
  margin-top: 0px;
 
  }
- /* body{
+ body{
   margin: 0%;
-  background-color:black;
+  background-color: white;
   font-family: 'Koulen', cursive;
   font-size: 2rem;
   color: rgba(212, 14, 14, 0.599);
   
 }
-*/
+
  .buttondw {
- width: 50px;
- height: 50px;
- display: inline-block;
-cursor: pointer;
-margin-left: 0px;
-background-image: url('downvote.jpg');
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+    cursor: pointer;
+    margin-left: 0px;
+  background-image: url('downvote.jpg');
+  background-color: white;
 }
 
  .buttonup:hover {
